2009-06-20  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (create_thread) [WIN32_THREADS]: initialize thread's
	_signal_reenter_ok on Win32 as well

2009-06-19  Sam Steingold  <sds@gnu.org>

	* modules/postgresql/postgresql.lisp (PQexecParams, PQprepare)
	(PQexecPrepared, PQsendQueryParams, PQsendPrepare)
	(PQsendQueryPrepared, PQfn): fix the declarations (input
	parameters were declared as output)
	Reported by SOS Sukaeto <sukaeto@gmail.com>

2009-06-19  Sam Steingold  <sds@gnu.org>

	* type.lisp (thread, mutex, exemption) [MULTITHREAD]: add atomic types

2009-06-19  Sam Steingold  <sds@gnu.org>

	* modules/postgresql/configure.in: check types Oid and pqbool

2009-06-19  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (size_t, ssize_t): map to CS-CL:symbol-name in
	*C-TYPE-TABLE*, not to the symbol, as should be done as per DEF-C-TYPE

2009-06-18  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: use CL:MAKUNBOUND instead of :UNBOUND (removed)
	* zthread.d (SYMBOL-VALUE-THREAD): use CL:MAKUNBOUND instead of :UNBOUND
	as second return value
	* constsym.d (:UNBOUND): remove

2009-06-18  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: fix possible deadlock in SYMBOL-VALUE-THREAD
	* zthread.d (thread_symbol_place): do not check arguments. it is called
	when all_threads lock is held and if GC occurs we will get deadlock
	(SYMBOL-VALUE-THREAD): check arguments before acquiring all_threads lock
	(SET-SYMBOL-VALUE-THREAD): ditto

2009-06-17  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (SYMBOL-VALUE-THREAD): return (VALUES NIL :UNBOUND) in case
	special variable was per thread bound and made unbound via MAKUNBOUND
	* constsym.d (:UNBOUND) [MULTITHREAD]: define it

2009-06-17  Sam Steingold  <sds@gnu.org>

	* clisp-link.in (linkkitdir): when ./linkkit is not found, use
	`dirname $0`/linkkit because there is one in *LIB-DIRECTORY*

2009-06-17  Sam Steingold  <sds@gnu.org>

	* makemake.in (install-bin): install clisp-link using INSTALL_PROGRAM